fix: alignment for single string

--- a/src/core/index.css
+++ b/src/core/index.css
@@ -111,7 +111,7 @@
 }
 
 .array-item-list .array-item {
-  @apply relative rounded border p-2;
+  @apply relative rounded border px-2 pb-3 pt-2;
 }
 
 .field-array > legend {
@@ -152,22 +152,16 @@ select:focus {
 /* ------------------------ Props Editor ------------------------ */
 
 .array-item-list > :not([hidden]) ~ :not([hidden]) {
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .array-item-toolbox > .btn-group {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 50;
+  @apply absolute -bottom-2.5 right-0 z-50 rounded border border-border;
 }
 
 .array-item-toolbox > .btn-group > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-x-reverse: 0;
-  /* border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse))); */
   --tw-divide-opacity: 1;
-  /* border-color: rgb(209 213 219 / var(--tw-divide-opacity)); */
 }
 
 .array-item-toolbox > .btn-group {
@@ -188,12 +182,10 @@ select:focus {
 
 .array-item-toolbox > .btn-group > .btn {
   display: flex;
-  height: 1.75rem;
-  width: 2rem;
   cursor: pointer;
   align-items: center;
   justify-content: center;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   line-height: 1rem;
 }
 
@@ -202,8 +194,7 @@ select:focus {
 }
 
 .btn.btn-danger.array-item-remove:before {
-  font-size: 0.7rem;
-  line-height: 1.25rem;
+  font-size: 0.6rem;
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
   --tw-content: "✖";
